==> uYanki/board-stm32f103rc-berial/7.Example/hal/i2c/Lib/i2cdev/i2cdev.c <==
#include "i2cdev.h"
#define SDA_L(bus) HAL_GPIO_WritePin(bus->SDA_Port, bus->SDA_Pin, GPIO_PIN_RESET)
#define SDA_H(bus) HAL_GPIO_WritePin(bus->SDA_Port, bus->SDA_Pin, GPIO_PIN_SET)
#define SCL_L(bus) HAL_GPIO_WritePin(bus->SCL_Port, bus->SCL_Pin, GPIO_PIN_RESET)
#define SCL_H(bus) HAL_GPIO_WritePin(bus->SCL_Port, bus->SCL_Pin, GPIO_PIN_SET)
#define SDA(bus)   HAL_GPIO_ReadPin(bus->SDA_Port, bus->SDA_Pin)
#define Delay(bus) HAL_Delay_us(bus->Interval)

static void SDA_IN(soft_i2c_t* bus)
{
    GPIO_InitStruct.Pin  = bus->SDA_Pin,
    GPIO_InitStruct.Mode = GPIO_MODE_INPUT,
    HAL_GPIO_Init(bus->SDA_Port, &GPIO_InitStruct);
}

static void SDA_OUT(soft_i2c_t* bus)
{
    GPIO_InitStruct.Pin  = bus->SDA_Pin,
    GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_OD,
    HAL_GPIO_Init(bus->SDA_Port, &GPIO_InitStruct);
}

INLINE bool hard_i2c_check(hard_i2c_t* bus, uint16_t dev)
{
    return HAL_I2C_IsDeviceReady(bus, dev, 5, 0xFFFF) == HAL_OK;
}

INLINE bool hard_i2c_receive(hard_i2c_t* bus, uint16_t dev, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    return HAL_I2C_Master_Receive(bus, dev, dat, len, 0xFF) == HAL_OK;
}

INLINE bool hard_i2c_transmit(hard_i2c_t* bus, uint16_t dev, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    return HAL_I2C_Master_Transmit(bus, dev, dat, len, 0xFF) == HAL_OK;
}

INLINE bool hard_i2c_read_mem(hard_i2c_t* bus, uint16_t dev, uint16_t reg, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    return HAL_I2C_Mem_Read(bus, dev, reg, ops & I2C_REG_16BIT ? I2C_MEMADD_SIZE_16BIT : I2C_MEMADD_SIZE_8BIT, dat, len, 0xFF) == HAL_OK;
}

INLINE bool hard_i2c_write_mem(hard_i2c_t* bus, uint16_t dev, uint16_t reg, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    return HAL_I2C_Mem_Write(bus, dev, reg, ops & I2C_REG_16BIT ? I2C_MEMADD_SIZE_16BIT : I2C_MEMADD_SIZE_8BIT, dat, len, 0xFF) == HAL_OK;
}
