==> uYanki/board-stm32f103rc-berial/7.Example/std/Demos/i2c/Lib/i2cdev/i2cdev.c <==
#include "i2cdev.h"
#define SDA_L(bus) GPIO_ResetBits(bus->SDA_Port, bus->SDA_Pin)
#define SDA_H(bus) GPIO_SetBits(bus->SDA_Port, bus->SDA_Pin)
#define SCL_L(bus) GPIO_ResetBits(bus->SCL_Port, bus->SCL_Pin)
#define SCL_H(bus) GPIO_SetBits(bus->SCL_Port, bus->SCL_Pin)
#define SDA(bus)   GPIO_ReadInputDataBit(bus->SDA_Port, bus->SDA_Pin)
#define Delay(bus) delay_us(bus->Interval)

static void SDA_IN(soft_i2c_t bus)
{
    // GPIO_Mode_IN_FLOATING

    switch (bus->SDA_Pin) {
        case GPIO_Pin_0:
            bus->SDA_Port->CRL &= 0xFFFFFFF0;
            bus->SDA_Port->CRL |= 4 << 0;
            break;
        case GPIO_Pin_1:
            bus->SDA_Port->CRL &= 0xFFFFFF0F;
            bus->SDA_Port->CRL |= 4 << 4;
            break;
        case GPIO_Pin_2:
            bus->SDA_Port->CRL &= 0xFFFFF0FF;
            bus->SDA_Port->CRL |= 4 << 8;
            break;
        case GPIO_Pin_3:
            bus->SDA_Port->CRL &= 0xFFFF0FFF;
            bus->SDA_Port->CRL |= 4 << 12;
            break;
        case GPIO_Pin_4:
            bus->SDA_Port->CRL &= 0xFFF0FFFF;
            bus->SDA_Port->CRL |= 4 << 16;
            break;
        case GPIO_Pin_5:
            bus->SDA_Port->CRL &= 0xFF0FFFFF;
            bus->SDA_Port->CRL |= 4 << 20;
            break;
        case GPIO_Pin_6:
            bus->SDA_Port->CRL &= 0xF0FFFFFF;
            bus->SDA_Port->CRL |= 4 << 24;
            break;
        case GPIO_Pin_7:
            bus->SDA_Port->CRL &= 0x0FFFFFFF;
            bus->SDA_Port->CRL |= 4 << 28;
            break;
        case GPIO_Pin_8:
            bus->SDA_Port->CRH &= 0xFFFFFFF0;
            bus->SDA_Port->CRH |= 4 << 0;
            break;
        case GPIO_Pin_9:
            bus->SDA_Port->CRH &= 0xFFFFFF0F;
            bus->SDA_Port->CRH |= 4 << 4;
            break;
        case GPIO_Pin_10:
            bus->SDA_Port->CRH &= 0xFFFFF0FF;
            bus->SDA_Port->CRH |= 4 << 8;
            break;
        case GPIO_Pin_11:
            bus->SDA_Port->CRH &= 0xFFFF0FFF;
            bus->SDA_Port->CRH |= 4 << 12;
            break;
        case GPIO_Pin_12:
            bus->SDA_Port->CRH &= 0xFFF0FFFF;
            bus->SDA_Port->CRH |= 4 << 16;
            break;
        case GPIO_Pin_13:
            bus->SDA_Port->CRH &= 0xFF0FFFFF;
            bus->SDA_Port->CRH |= 4 << 20;
            break;
        case GPIO_Pin_14:
            bus->SDA_Port->CRH &= 0xF0FFFFFF;
            bus->SDA_Port->CRH |= 4 << 24;
            break;
        case GPIO_Pin_15:
            bus->SDA_Port->CRH &= 0x0FFFFFFF;
            bus->SDA_Port->CRH |= 4 << 28;
            break;
    }
}

static void SDA_OUT(soft_i2c_t bus)
{
    // GPIO_Mode_Out_OD, GPIO_Speed_50MHz

    switch (bus->SDA_Pin) {
        case GPIO_Pin_0:
            bus->SDA_Port->CRL &= 0xFFFFFFF0;
            bus->SDA_Port->CRL |= 7 << 0;
            break;
        case GPIO_Pin_1:
            bus->SDA_Port->CRL &= 0xFFFFFF0F;
            bus->SDA_Port->CRL |= 7 << 4;
            break;
        case GPIO_Pin_2:
            bus->SDA_Port->CRL &= 0xFFFFF0FF;
            bus->SDA_Port->CRL |= 7 << 8;
            break;
        case GPIO_Pin_3:
            bus->SDA_Port->CRL &= 0xFFFF0FFF;
            bus->SDA_Port->CRL |= 7 << 12;
            break;
        case GPIO_Pin_4:
            bus->SDA_Port->CRL &= 0xFFF0FFFF;
            bus->SDA_Port->CRL |= 7 << 16;
            break;
        case GPIO_Pin_5:
            bus->SDA_Port->CRL &= 0xFF0FFFFF;
            bus->SDA_Port->CRL |= 7 << 20;
            break;
        case GPIO_Pin_6:
            bus->SDA_Port->CRL &= 0xF0FFFFFF;
            bus->SDA_Port->CRL |= 7 << 24;
            break;
        case GPIO_Pin_7:
            bus->SDA_Port->CRL &= 0x0FFFFFFF;
            bus->SDA_Port->CRL |= 7 << 28;
            break;
        case GPIO_Pin_8:
            bus->SDA_Port->CRH &= 0xFFFFFFF0;
            bus->SDA_Port->CRH |= 7 << 0;
            break;
        case GPIO_Pin_9:
            bus->SDA_Port->CRH &= 0xFFFFFF0F;
            bus->SDA_Port->CRH |= 7 << 4;
            break;
        case GPIO_Pin_10:
            bus->SDA_Port->CRH &= 0xFFFFF0FF;
            bus->SDA_Port->CRH |= 7 << 8;
            break;
        case GPIO_Pin_11:
            bus->SDA_Port->CRH &= 0xFFFF0FFF;
            bus->SDA_Port->CRH |= 7 << 12;
            break;
        case GPIO_Pin_12:
            bus->SDA_Port->CRH &= 0xFFF0FFFF;
            bus->SDA_Port->CRH |= 7 << 16;
            break;
        case GPIO_Pin_13:
            bus->SDA_Port->CRH &= 0xFF0FFFFF;
            bus->SDA_Port->CRH |= 7 << 20;
            break;
        case GPIO_Pin_14:
            bus->SDA_Port->CRH &= 0xF0FFFFFF;
            bus->SDA_Port->CRH |= 7 << 24;
            break;
        case GPIO_Pin_15:
            bus->SDA_Port->CRH &= 0x0FFFFFFF;
            bus->SDA_Port->CRH |= 7 << 28;
            break;
    }
}

bool hard_i2c_check(hard_i2c_t bus, uint16_t dev)
{
    uint32_t timeout;

    bool ret = false;

    /* busy? */
    timeout = bus->Timeout;
    while (I2C_GetFlagStatus(bus->I2C, I2C_FLAG_BUSY)) {
        if (timeout-- == 0) goto exit;
    }

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Transmitter);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* stop */
    ret = true;
exit:
    I2C_GenerateSTOP(bus->I2C, ENABLE);
    return ret;
}

bool hard_i2c_receive(hard_i2c_t bus, uint16_t dev, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    uint32_t timeout;

    bool ret = false;

    if (len == 0) return ret;

    dev &= 0xFE;

#if 1

    /* busy? */
    timeout = bus->Timeout;
    while (I2C_GetFlagStatus(bus->I2C, I2C_FLAG_BUSY)) {
        if (timeout-- == 0) goto exit;
    }

#endif

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Receiver);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* recv data */

    while (--len) {
        timeout = bus->Timeout;
        *dat++  = I2C_ReceiveData(bus->I2C);
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_RECEIVED)) {
            if (timeout-- == 0) goto exit;
        }
    }

    I2C_AcknowledgeConfig(bus->I2C, DISABLE);  // NACK

    timeout = bus->Timeout;
    *dat    = I2C_ReceiveData(bus->I2C);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_RECEIVED)) {
        if (timeout-- == 0) goto exit;
    }

    /* stop */
    ret = true;

    if (ops & I2C_NOSTOP) return ret;

exit:
    I2C_GenerateSTOP(bus->I2C, ENABLE);

    I2C_AcknowledgeConfig(bus->I2C, ENABLE);  // ACK

    return ret;
}

bool hard_i2c_transmit(hard_i2c_t bus, uint16_t dev, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    uint32_t timeout;

    bool ret = false;

    if (len == 0) return ret;

#if 1
    /* busy? */
    timeout = bus->Timeout;
    while (I2C_GetFlagStatus(bus->I2C, I2C_FLAG_BUSY)) {
        if (timeout-- == 0) goto exit;
    }
#endif

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Transmitter);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* send data */
    while (len--) {
        timeout = bus->Timeout;
        I2C_SendData(bus->I2C, *dat++);
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
            if (timeout-- == 0) goto exit;
        }
    }

    /* stop */
    ret = true;

    if (ops & I2C_NOSTOP) return ret;

exit:
    I2C_GenerateSTOP(bus->I2C, ENABLE);
    return ret;
}

bool hard_i2c_read_mem(hard_i2c_t bus, uint16_t dev, uint16_t reg, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    uint32_t timeout;

    bool ret = false;
    if (len == 0) return ret;

#if 1
    /* busy? */
    timeout = bus->Timeout;
    while (I2C_GetFlagStatus(bus->I2C, I2C_FLAG_BUSY)) {
        if (timeout-- == 0) goto exit;
    }
#endif

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Transmitter);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* send reg */

    if (ops & I2C_REG_16BIT) {
        timeout = bus->Timeout;
        I2C_SendData(bus->I2C, reg >> 8);
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
            if (timeout-- == 0) goto exit;
        }
    }

    timeout = bus->Timeout;
    I2C_SendData(bus->I2C, reg & 0xFF);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
        if (timeout-- == 0) goto exit;
    }

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Receiver);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_RECEIVER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* recv data */

    while (--len) {
        timeout = bus->Timeout;
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_RECEIVED)) {
            if (timeout-- == 0) goto exit;
        }
        *dat++ = I2C_ReceiveData(bus->I2C);
    }

    I2C_AcknowledgeConfig(bus->I2C, DISABLE);  // NACK

    timeout = bus->Timeout;
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_RECEIVED)) {
        if (timeout-- == 0) goto exit;
    }
    *dat = I2C_ReceiveData(bus->I2C);

    /* stop */
    ret = true;

exit:

    I2C_GenerateSTOP(bus->I2C, ENABLE);

    I2C_AcknowledgeConfig(bus->I2C, ENABLE);  // ACK

    return ret;
}

bool hard_i2c_write_mem(hard_i2c_t bus, uint16_t dev, uint16_t reg, uint8_t* dat, uint16_t len, i2c_ops_t ops)
{
    uint32_t timeout;

    bool ret = false;

    if (len == 0) return ret;

#if 1
    /* busy? */
    timeout = bus->Timeout;
    while (I2C_GetFlagStatus(bus->I2C, I2C_FLAG_BUSY)) {
        if (timeout-- == 0) goto exit;
    }
#endif

    /* start */
    timeout = bus->Timeout;
    I2C_GenerateSTART(bus->I2C, ENABLE);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_MODE_SELECT)) {
        if (timeout-- == 0) goto exit;
    }

    /* send addr */
    timeout = bus->Timeout;
    I2C_Send7bitAddress(bus->I2C, dev, I2C_Direction_Transmitter);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_TRANSMITTER_MODE_SELECTED)) {
        if (timeout-- == 0) goto exit;
    }

    /* send reg */

    if (ops & I2C_REG_16BIT) {
        timeout = bus->Timeout;
        I2C_SendData(bus->I2C, reg >> 8);
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
            if (timeout-- == 0) goto exit;
        }
    }

    timeout = bus->Timeout;
    I2C_SendData(bus->I2C, reg & 0xFF);
    while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTING)) {
        if (timeout-- == 0) goto exit;
    }

    /* send data */
    while (len--) {
        timeout = bus->Timeout;
        I2C_SendData(bus->I2C, *dat++);
        while (ERROR == I2C_CheckEvent(bus->I2C, I2C_EVENT_MASTER_BYTE_TRANSMITTED)) {
            if (timeout-- == 0) goto exit;
        }
    }

    /* stop */
    ret = true;

exit:

    I2C_GenerateSTOP(bus->I2C, ENABLE);

    return ret;
}
